--- a/files/network-assistant-server.service
+++ b/files/network-assistant-server.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Network Assistant Client
+Description=Network Assistant Server
 After=network-online.target
 Wants=network-online.target
 
