服务端默认为二进制部署

--- a/files/network-assistant-server.service
+++ b/files/network-assistant-server.service
@@ -5,7 +5,7 @@ Wants=network-online.target
 
 [Service]
 WorkingDirectory=/opt/NetworkAssistant
-ExecStart=/usr/local/bin/python3.11 server.py
+ExecStart=/usr/local/bin/network-assistant-server
 Restart=on-failure
 RestartSec=5s
 
